Fix gap

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,14 +12,6 @@
   }
 }
 
-html,
-body,
-#root {
-  width: 100%;
-  max-width: 100%; 
-  overflow-x: hidden;
-}
-
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
